# atlas_firmware

./: README.md  manifest.py  mpconfigboard.cmake  pimoroni.py
cmodules/: micropython.cmake
cmodules/encoder/: CMakeLists.txt  encoder.cmake  encoder.cpp  micropython.cmake  pimoroni_common.hpp  util.hpp
cmodules/encoder/encoder/: CMakeLists.txt  encoder.hpp  micropython.mk
